--- a/Tratamento_microdados.ipynb
+++ b/Tratamento_microdados.ipynb
@@ -144,6 +144,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## microdados2021_arq6 \n",
+    "Idade quando fez a prova"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo gerado com sucesso no diretorio 'microdados_tratados/form_microdados_arq6.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapeamento_idade = {i: i for i in range(7, 90)}\n",
+    "\n",
+    "processar_arquivo(\n",
+    "    'microdados_Enade_2021_LGPD/2.DADOS/microdados2021_arq6.txt',   #arquivo_entrada\n",
+    "    'aux_files/vetores/microdados_aux.csv',                         #arquivo_auxiliar para o mapeamento do CO_CURSO\n",
+    "    f'{dir_destino}/form_microdados_arq6.csv',                     #arquivo_saida\n",
+    "    mapeamento_idade,                                              #mapeamento\n",
+    "    'NU_IDADE'                                                        #cabecalho coluna\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## microdados2021_arq7 \n",
     "QE1: Qual o seu estado civil?"
    ]
